--- a/20250922.ipynb
+++ b/20250922.ipynb
@@ -3297,6 +3297,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "6085b472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello::::::python\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\", \"python\", sep='::::::')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f09b835d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_myself(name, age, man=True, hobby='coding'):\n",
+    "    print(f'{name}, {age}')\n",
+    "    print(man)\n",
+    "    print(hobby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2dbdcca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jimin, 29\n",
+      "False\n",
+      "game\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_myself('jimin', 29, hobby = 'game', man = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18fafafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_myself(name, age , man=True):\n",
+    "    print(f'{name}, {age}')\n",
+    "    if man:\n",
+    "        print('남자')\n",
+    "    else:\n",
+    "        print('여자')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 347,
    "id": "8b03d379",
    "metadata": {},
